tests/suite/snapshots/suite__check__tests__check__bad_unbound_class_template_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_unbound_class_template_1.ixi:1:8]
   │
 1 │ foo(): A::<bool>
   ·        ┬  
   ·        ╰── Unbound class template A
───╯

